--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "NODE_OPTIONS='--openssl-legacy-provider' expo start --web"
+    "web": "NODE_OPTIONS='--openssl-legacy-provider' expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -24,7 +25,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.34.0"
   },
   "private": true
 }
